github actions iteration

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,6 +40,8 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
-        run: dotnet build --configuration Release --no-restore -f net7.0-windows10.0.19041.0
+        run: dotnet build .\LockPDFyGithubActionsFriendly.slnf --no-restore --configuration Release -f net7.0-windows
+      - name: Build maui
+        run: dotnet build .\LockPDFyMaui --no-restore --configuration Release -f net7.0-windows10.0.19041.0
       - name: Test
-        run: dotnet test --no-build --verbosity normal --configuration Release -f net7.0-windows10.0.19041.0
+        run: dotnet test  --no-restore --no-build --verbosity normal --configuration Release
