--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,8 +40,8 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
-        run: dotnet build .\LockPDFyGithubActionsFriendly.slnf --no-restore --configuration Release -f net7.0-windows
+        run: dotnet build .\LockPDFyGithubActionsFriendly.slnf --no-restore --configuration Release
       - name: Build maui
         run: dotnet build .\LockPDFyMaui --no-restore --configuration Release -f net7.0-windows10.0.19041.0
       - name: Test
-        run: dotnet test  --no-restore --no-build --verbosity normal --configuration Release
+        run: dotnet test  .\LockPDFyGithubActionsFriendly.slnf --no-restore --no-build --verbosity normal --configuration Release
