--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,8 +8,7 @@ env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true # Disable the .NET first time experience
   DOTNET_CLI_TELEMETRY_OPTOUT: true       # Disable sending .NET CLI telemetry
 
-# TODO add secrets in github SIGN_CERT, ANDROID_SIGN_CERT_PASSWORD
-
+# @Forkers: add secrets in github SIGN_CERT, ANDROID_SIGN_CERT_PASSWORD use https://devblogs.microsoft.com/dotnet/devops-for-dotnet-maui/
 
 on:
   push:
@@ -23,6 +22,9 @@ permissions:
   contents: read
 
   # Parts got from https://github.com/irongut/MauiBeach/blob/master/.github/workflows/ci-build.yml
+  # Create Base64 encoded version of keystore
+  # certutil.exe -encode .\GooglePlayStore.keystore .\GooglePlayStore.keystore.base64
+  # drop the primer and end stuff
 
 jobs:
   build:
@@ -57,11 +59,13 @@ jobs:
         id: secret-file
         env:
           SIGN_CERT: ${{ secrets.SIGN_CERT }}
-          SIGN_CERT_STOREPASS: ${{ secrets.ANDROID_SIGN_CERT }}
+          ANDROID_SIGN_CERT_PASSWORD: ${{ secrets.ANDROID_SIGN_CERT_PASSWORD }}
         if:  env.SIGN_CERT != ''
         run: |
           $secretFile = "AndroidSignCert.pfx"; 
-          $encodedBytes = [System.Convert]::FromBase64String($env:SIGN_CERT); 
-          Set-Content $secretFile -Value $encodedBytes -AsByteStream;
+          $secretFileBase64 = "AndroidSignCert.pfx";
+          certutil.exe -decode $secretFileBase64 $secretFile  
+          Set-Content $secretFileBase64 -Value $env:SIGN_CERT
           Write-Output "::set-output name=SECRET_FILE::$secretFile";
+          Write-Output "::set-output name=SECRET_FILE::$secretFileBase64";
           jarsigner -verbose -sigalg SHA256withRSA -digestalg SHA-256 -keystore $secretFile .\LockPDFyMaui\bin\Release\net7.0-android\publish\$PACKAGENAME.aab AndroidApps -storepass ${{secrets.ANDROID_SIGN_CERT_PASSWORD}}
