--- a/LockPDFy/LockPDFy.csproj
+++ b/LockPDFy/LockPDFy.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="itext7" Version="8.0.1" />
+    <PackageReference Include="itext7.bouncy-castle-adapter" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
