--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -67,20 +67,10 @@ jobs:
           Write-Output "::set-output name=SECRET_FILE::$secretFile";
           # jarsigner -verbose -sigalg SHA256withRSA -digestalg SHA-256 -keystore $secretFile .\LockPDFyMaui\bin\Release\net7.0-android\publish\$PACKAGENAME.aab AndroidApps -storepass ${{secrets.ANDROID_SIGN_CERT_PASSWORD}}
       - uses: marvinpinto/action-automatic-releases@v1.2.1
-        if: startsWith(github.ref, 'refs/heads/release')
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: ${{ env.CURRENT_VERSION }}
-          prerelease: false
-          title: "Release Build"
-          files: |
-            .\LockPDFyMaui\bin\Release\net7.0-android\publish\*.aab
-      - uses: marvinpinto/action-automatic-releases@v1.2.1
-        if: not startsWith(github.ref, 'refs/heads/release')
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: ${{ env.CURRENT_VERSION }}
-          prerelease: false
-          title: "Release Build"
+          prerelease: true
+          title: "Prerelease Build"
           files: |
             .\LockPDFyMaui\bin\Release\net7.0-android\publish\*.aab
