--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -70,13 +70,13 @@ jobs:
         shell: bash
         env:
           GITHUB_TOKEN: ${{ github.TOKEN }}
-        if: startsWith(github.ref, 'refs/heads/release') AND env.GITHUB_TOKEN != ''
+        if: startsWith(github.ref, 'refs/heads/release') && env.GITHUB_TOKEN != ''
         run: |
             gh release create ${{env.CURRENT_VERSION}} .\LockPDFyMaui\bin\Release\net7.0-android\publish\*.aab --generate-notes
       - name: Github prerelease
         shell: bash
         env:
           GITHUB_TOKEN: ${{ github.TOKEN }}
-        if: startsWith(github.ref, 'refs/heads/release') == false AND env.GITHUB_TOKEN != ''
+        if: startsWith(github.ref, 'refs/heads/release') == false && env.GITHUB_TOKEN != ''
         run: |
             gh release create ${{env.CURRENT_VERSION}} .\LockPDFyMaui\bin\Release\net7.0-android\publish\*.aab --prerelease --generate-notes
