--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,7 +19,7 @@ on:
   pull_request:
   workflow_dispatch:
 permissions:
-  contents: read
+  contents: write
 
   # Parts got from https://github.com/irongut/MauiBeach/blob/master/.github/workflows/ci-build.yml
   # Create Base64 encoded version of keystore
@@ -70,13 +70,13 @@ jobs:
         shell: bash
         env:
           GITHUB_TOKEN: ${{ github.TOKEN }}
-        if: startsWith(github.ref, 'refs/heads/release') && env.GITHUB_TOKEN != ''
+        if: ${{ github.event_name == 'push' }} && startsWith(github.ref, 'refs/heads/release') && env.GITHUB_TOKEN != ''
         run: |
-            gh release create ${{env.CURRENT_VERSION}} .\LockPDFyMaui\bin\Release\net7.0-android\publish\*.aab --generate-notes
+            gh release create ${{env.CURRENT_VERSION}} ./LockPDFyMaui/bin/Release/net7.0-android/publish/*.aab --generate-notes
       - name: Github prerelease
         shell: bash
         env:
           GITHUB_TOKEN: ${{ github.TOKEN }}
-        if: startsWith(github.ref, 'refs/heads/release') == false && env.GITHUB_TOKEN != ''
+        if: ${{ github.event_name == 'push' }} && startsWith(github.ref, 'refs/heads/release') == false && env.GITHUB_TOKEN != ''
         run: |
-            gh release create ${{env.CURRENT_VERSION}} .\LockPDFyMaui\bin\Release\net7.0-android\publish\*.aab --prerelease --generate-notes
+            gh release create ${{env.CURRENT_VERSION}} ./LockPDFyMaui/bin/Release/net7.0-android/publish/*.aab --prerelease --generate-notes
