--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -70,13 +70,13 @@ jobs:
         shell: bash
         env:
           GITHUB_TOKEN: ${{ github.TOKEN }}
-        if: ${{ github.event_name == 'push' }} && startsWith(github.ref, 'refs/heads/release') && env.GITHUB_TOKEN != ''
+        if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/heads/release') && env.GITHUB_TOKEN != '' }}
         run: |
             gh release create ${{env.CURRENT_VERSION}} ./LockPDFyMaui/bin/Release/net7.0-android/publish/*.aab --generate-notes
       - name: Github prerelease
         shell: bash
         env:
           GITHUB_TOKEN: ${{ github.TOKEN }}
-        if: ${{ github.event_name == 'push' }} && startsWith(github.ref, 'refs/heads/release') == false && env.GITHUB_TOKEN != ''
+        if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/heads/release') == false && env.GITHUB_TOKEN != '' }}
         run: |
             gh release create ${{env.CURRENT_VERSION}} ./LockPDFyMaui/bin/Release/net7.0-android/publish/*.aab --prerelease --generate-notes
