--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -72,11 +72,11 @@ jobs:
           GITHUB_TOKEN: ${{ github.TOKEN }}
         if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/heads/release') && env.GITHUB_TOKEN != '' }}
         run: |
-            gh release create ${{env.CURRENT_VERSION}} ./LockPDFyMaui/bin/Release/net8.0-android/publish/*.aab --generate-notes
+            gh release create ${{env.CURRENT_VERSION}} ./LockPDFyMaui/bin/Release/net8.0-android/publish/*.aab ./LockPDFyMaui/bin/Release/net8.0-android/publish/*.apk --generate-notes
       - name: Github prerelease
         shell: bash
         env:
           GITHUB_TOKEN: ${{ github.TOKEN }}
         if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/heads/release') == false && env.GITHUB_TOKEN != '' }}
         run: |
-            gh release create ${{env.CURRENT_VERSION}} ./LockPDFyMaui/bin/Release/net8.0-android/publish/*.aab --prerelease --generate-notes
+            gh release create ${{env.CURRENT_VERSION}} ./LockPDFyMaui/bin/Release/net8.0-android/publish/*.aab ./LockPDFyMaui/bin/Release/net8.0-android/publish/*.apk --prerelease --generate-notes
