--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,13 +36,11 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v5
         with:
-          dotnet-version: 8.0.x
+          dotnet-version: 10.0.x
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v2
-      - name: Install MAUI Workloads
-        run: |
-          dotnet workload install android --ignore-failed-sources
-          dotnet workload install maui --ignore-failed-sources
+      - name: Restore MAUI workloads
+        run: dotnet workload restore
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
