--- a/LockPDFyWinforms/LockPDFyWinforms.csproj
+++ b/LockPDFyWinforms/LockPDFyWinforms.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net10.0-windows</TargetFramework>
 		<OutputType>WinExe</OutputType>
@@ -19,7 +19,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Windows.Compatibility" Version="8.0.2" />
+		<PackageReference Include="Microsoft.Windows.Compatibility" Version="10.0.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\LockPDFy\LockPDFy.csproj" />
